--- a/config/database.yml
+++ b/config/database.yml
@@ -11,23 +11,23 @@
 development:
   adapter: mysql2
   encoding: utf8
-  database: ciaot1_oplink
-  username: ciaot1
-  password: '7~X9@Tw&%&)Rsadssa23'
-  host: 209.200.231.164
+  database: oplink_development
+  pool: 50
+  username: root
+  password: root
+  host: 127.0.0.1
   port: 3306
-
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
+  adapter: mysql2
+  database: db/test.mysql2
+  pool: 50
   timeout: 5000
 
 production:
-  adapter:  postgresql
+  adapter:  mysql2
   encoding: utf8
   database: ciaot1_oplink
   username: ciaot1
